--- a/data/chap02.tex
+++ b/data/chap02.tex
@@ -14,7 +14,7 @@
     无论用户使用的是 Windows，macOS（OS X），GNU/Linux 还是 FreeBSD 等操作系统，都能轻松获得和使用这一强大的排版工具，并且获得稳定的输出。
   \end{itemize}
 
-相较于Word排版系统，\LaTeX{}排版的优点显而易见。当然它也有一些缺点，比如不能所见即所得，入门门槛较高等，但笔者认为在进行长文档或是论文文档进行排版时，\LaTeX{}的效率是\texttt{Word}无法比拟的。事实上，国外相当多的期刊都接受\LaTeX{}投稿；国内也有部分期刊支持，但总的来说并未很好普及。此外，国内相当多的高校有着官方或非官方的学位论文模板，极大地便利了学生的论文写作。笔者相信本校学子也有或多或少的了解并有一定程度的使用，但时至今日\footnote{2020年夏}未见本校的学位论文模板，难免有些遗憾。在此情况下，笔者决定依据学校研究生院学位论文写作要求撰写\LaTeX{}模板。
+相较于Word排版系统，\LaTeX{}排版的优点显而易见。当然它也有一些缺点，比如不能所见即所得，入门门槛较高等，但笔者认为在进行长文档或是论文文档进行排版时，\LaTeX{}的效率是\texttt{Word}无法比拟的。事实上，国外相当多的期刊都接受\LaTeX{}投稿；国内也有部分期刊支持，但总的来说数量较少。此外，国内相当多的高校有着官方或非官方的学位论文模板，极大地便利了学生的论文写作。笔者相信本校学子也有或多或少的了解并有一定程度的使用，但时至今日\footnote{2020年夏}未见本校的学位论文模板，难免有些遗憾。在此情况下，笔者决定依据学校研究生学位论文写作要求撰写\LaTeX{}模板。
 
 \section{使用建议}
 \LaTeX{}的宏包非常多，可拓展出非常强大的制作和排版能力，例如\pkg{TikZ}等。关于\LaTeX{}具体使用本文档不作详细介绍，入门的同学推荐参考《一份（不太）简短的~\LaTeXe{}~介绍》\cite{CTEX开发小组2020}，或是刘海洋编著的《\LaTeX{}入门》\cite{刘海洋2013}。欲作详细了解的可以查看《\LaTeX{}: A Document Preparation System or The \LaTeX{}~Companion》\cite{Lamport1994}和《The \LaTeX{}~Companion》\cite{Mittelbach2004}。关于宏包中的命令或特定功能的实现请阅读相应的宏包说明。
