--- a/XAUATutils.sty
+++ b/XAUATutils.sty
@@ -33,8 +33,8 @@
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}           
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-%表格内部强制换行
-\newcommand{\tabincell}[2]{
-\begin{tabular}{@{}#1@{}}#2\end{tabular}
-}    
+% %表格内部强制换行
+% \newcommand{\tabincell}[2]{
+% \begin{tabular}{@{}#1@{}}#2\end{tabular}
+% }    
 \endinput
