--- a/data/chap02.tex
+++ b/data/chap02.tex
@@ -17,8 +17,7 @@
 相较于Word排版系统，\LaTeX{}排版的优点显而易见。当然它也有一些缺点，比如不能所见即所得，入门门槛较高等，但笔者认为在进行长文档或是论文文档进行排版时，\LaTeX{}的效率是\texttt{Word}无法比拟的。事实上，国外相当多的期刊都接受\LaTeX{}投稿；国内也有部分期刊支持，但总的来说数量较少。此外，国内相当多的高校有着官方或非官方的学位论文模板，极大地便利了学生的论文写作。笔者相信本校学子也有或多或少的了解并有一定程度的使用，但时至今日\footnote{2020年夏}未见本校的学位论文模板，难免有些遗憾。在此情况下，笔者决定依据学校研究生学位论文写作要求撰写\LaTeX{}模板。
 
 \section{使用建议}
-\LaTeX{}的宏包非常多，可拓展出非常强大的制作和排版能力，例如\pkg{TikZ}等。关于\LaTeX{}具体使用本文档不作详细介绍，入门的同学推荐参考《一份（不太）简短的~\LaTeXe{}~介绍》\cite{CTEX开发小组2020}，或是刘海洋编著的《\LaTeX{}入门》\cite{刘海洋2013}。欲作详细了解的可以查看《\LaTeX{}: A Document Preparation System or The \LaTeX{}~Companion》\cite{Lamport1994}和《The \LaTeX{}~Companion》\cite{Mittelbach2004}。关于宏包中的命令或特定功能的实现请阅读相应的宏包说明。
-
+\LaTeX{}的宏包非常多，可拓展出非常强大的制作和排版能力，例如\texttt{TikZ}等。关于\LaTeX{}具体使用本文档不作详细介绍，入门的同学推荐参考《一份（不太）简短的~\LaTeXe{}~介绍》\cite{CTEX开发小组2020}，或是刘海洋编著的《\LaTeX{}入门》\cite{刘海洋2013}。欲作详细了解的可以查看《\LaTeX{}: A Document Preparation System or The \LaTeX{}~Companion》\cite{Lamport1994}和《The \LaTeX{}~Companion》\cite{Mittelbach2004}。关于宏包中的命令或特定功能的实现请阅读相应的宏包说明。
 \section{问题与改进}
 笔者所在专业为工程领域，对学校其它专业写作要求了解不多。另外本人也是\LaTeX{}排版系统入门者，撰写过程中也是边翻资料边学习命令，因此难免存在一些\textbf{\songti 错误和疏漏}。有兴趣使用的同学若在使用过程中出现问题，欢迎向笔者反映\footnote{个人邮箱：\texttt{chuandongxie@163.com}，或\texttt{XAUATthesis}的\texttt{Github}代码仓}；或是提出建议，笔者将不胜感激。
 
