--- a/data/cover.tex
+++ b/data/cover.tex
@@ -1,6 +1,6 @@
 \XAUATsetup{
     ctitlefirst={西安建筑科技大学\LaTeX{}},
-    ctitlesecond={学位论文模板},
+    ctitlesecond={学位论文模板v1.0.0},
     etitle={A \LaTeX{} Thesis Template for Xi\textquotesingle an University of Architecture and Technology},
     disciplineclassification={***},
     studentnumber={0987654321},
